add user input box

--- a/views/git_info.erb
+++ b/views/git_info.erb
@@ -1,3 +1,5 @@
-<h1>Hello Beckley Please enter your name.</h1>
-<form action='details' method='post'>
-<input type= 'text' name= "name">
+<h1> Hello Beckley, What is your name?</h1>
+
+<form action="name" method="post">
+  <input type="text" name="name">
+  <input type= "submit" value= "Submit">
